--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+assert_cmd = "0.11.0"
+clap = "2.33.3"
+predicates = "1.0.0"
 
+[lib] 
+test = false
+
+[[bin]]
+name = "kvs"
+test = false
+
+[build-dependencies]
+clap = "2.33.3"
